# bonch-schedule

./: README.md  pyproject.toml  requirements.txt
bonch/common/: AbstractClient.py  __init__.py
bonch/common/model/: DayScheduleModel.py  SubjectModel.py  SubjectTimeModel.py  SubjectType.py  WeekScheduleModel.py  __init__.py
bonch/common/week/: WeekModel.py
bonch/common/week/number/: StudyWeekNumberService.py  WeekNumberService.py
bonch/schedule/: ISchedule.py  ScheduleBuilder.py  __init__.py
bonch/schedule/lk/: Client.py  Parser.py  ScheduleFromLK.py  __init__.py
bonch/schedule/site/: Client.py  ClientSite.py  ScheduleFromSite.py  SiteScheduleType.py  __init__.py
bonch/schedule/site/groups/: GroupListService.py
bonch/schedule/site/model/: FacultyModel.py  GroupItem.py
bonch/schedule/site/parser/: TimeTableParser.py  __init__.py
main/: __init__.py
tests/: TestGroupList.py  TestLKSchedule.py  TestSiteSchedule.py  TestWeekNumber.py
