[tool.poetry]
name = "bonch-schedule"
version = "0.0.1"
description = "Schedule Module for bonch"
authors = ["Никоноров Николай <nnv@bitt.moe>"]
readme = "README.md"
packages = [{include = "bonch"}]
license = "MIT"
repository = "https://github.com/Bitnik212/bonch-schedule"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
requests = "2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
